# Sequence-Handling

./: .gitignore  README.md  main.py  pyproject.toml  tox.ini
sequence_handler/: main.py
sequence_handler/utils/: common.py  data_utils.py
utils/: __init__.py  common.py  data_utils.py
